--- a/Application/templates/prediction.html
+++ b/Application/templates/prediction.html
@@ -1,5 +1,41 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta charset="UTF-8" />
+    <title>Iowa House</title>
+    <link rel ="stylesheet" href="../static/style.css" />
+    <!-- Font Awesome Cdn Link -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
+</head>
+<body>
+    <nav>
+        <ul>
+            <li>
+                <a href="#" class="logo">
+                    <img src="{{ url_for('static', filename='logo.jpg') }}" alt="">
+                    <span class="nav-item">Iowa House</span>
+                </a>
+            </li>
+            <li><a href ="{{ url_for('index') }}">
+                <i class="fas fa-home"></i>
+                <span class="nav-item">Accueil</span>
+            </a></li>
+            <li><a href ="{{ url_for('dashboard') }}">
+                <i class="fas fa-chart-bar"></i>
+                <span class="nav-item">Dashboard</span>
+            </a></li>
+            <li><a href ="{{ url_for('data') }}">
+                <i class="fas fa-database"></i>
+                <span class="nav-item">Data</span>
+            </a></li>
+            <li><a href ="{{ url_for('prediction') }}">
+                <i class="fas fa-cogs"></i>
+                <span class="nav-item">Prédiction</span>
+            </a></li>
+        </ul>
+    </nav>
+</body>
+</html>
   <head>
     <title>Formulaire de prédiction de prix de maison</title>
     <style>
