--- a/Application/templates/data.html
+++ b/Application/templates/data.html
@@ -34,5 +34,7 @@
             </a></li>
         </ul>
     </nav>
+    <iframe title="Spotify7" width="1140" height="541.25" src="https://app.powerbi.com/reportEmbed?reportId=4c219e7f-baa2-403a-bba1-2a44863e1ec6&autoAuth=true&ctid=56111054-529c-4d98-8a2b-43b0a0bbf946&pageName=Report2" frameborder="0" allowFullScreen="true"></iframe>
+
 </body>
 </html>
