BIGDATA-44 Préparation pour merge

--- a/Application/templates/prediction.html
+++ b/Application/templates/prediction.html
@@ -102,7 +102,7 @@
         <label for="surface_habitable" style="white-space: nowrap;">Quelle est la surface habitable du logement (en pi²) ?</label><br>
         <input type="number" id="surface_habitable" name="surface_habitable" step="10" required value="900"><br>
         </select><br>
-        <label for="etat_maison" style="white-space: nowrap;">Sur une échelle de 1 à 10 comment  évaluez vous les finitions du logement? ?</label><br>
+        <label for="etat_maison" style="white-space: nowrap;">Sur une échelle de 1 à 10 comment  évaluez vous les finitions du logement?</label><br>
         <input type="number" id="etat_maison" name="etat_maison" min="1" max="10" step="1" required value="5"><br>
         </select><br>
         <label for="hauteur_sous-sol" style="white-space: nowrap;">Quelle est la hauteur du sous-sol ?</label><br>
@@ -219,7 +219,7 @@
         <option value="N">Non</option>
       </select><br>
       <label for="bathroom" style="white-space: nowrap;">Quel est le nombre de salle de bain (0,5 si demi-salle de bain)</label><br>
-      <input type="number" id="bathroom" name="bathroom" min="0" step="0.5" required value="0"><br>
+      <input type="number" id="bathroom" name="bathroom" min="0" step="0.5" required value="1"><br>
     </select><br>
     <label for="heating">Quel est le type de chauffage ?</label><br>
     <select id="heating" name="heating">
