--- a/Application/templates/prediction.html
+++ b/Application/templates/prediction.html
@@ -239,7 +239,7 @@
       <option value="TwnhsI">Maison de ville à l'intérieur de l'unité</option>
     </select><br>
         <label style="margin-bottom: 20px;"></label>
-        <input type="submit" value="Predict">
+        <input type="submit" value="Prédiction">
       </form>            
     </body>
   </html>
