BIGDATA-41 : Liaison du modèle à l'API

--- a/Application/templates/index.html
+++ b/Application/templates/index.html
@@ -36,7 +36,7 @@
     </nav>
     <img src="{{ url_for('static', filename='logo.jpg') }}" class="logo-right">
     <div class="container">
-        <h1 style="margin-top: 30px;">Bienvenue sur le de pilotage de notre agence immobilière Iowa House</h1>
+        <h1 style="margin-top: 30px;">Bienvenue sur le pilotage de notre agence immobilière Iowa House</h1>
         <p style="margin-bottom: 30px;"">Cette application permet à tous les collaborateurs de l'agence d'accéder à des données précieuses et à notre outil de prédiction pour améliorer l'expertise de l'agence et offrir un service de qualité supérieure à nos clients.</p>
         <ul>
             <li><strong>Dashboard :</strong><br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; • Visualisez des indicateurs clés pour mieux comprendre les tendances du marché immobilier et suivre les performances de la région.</li>
