BIGDATA-41 : Liaison du modèle à l'API

--- a/Application/static/style.css
+++ b/Application/static/style.css
@@ -143,3 +143,8 @@ iframe{
     margin-top: 20px;
     }
 
+.prix-predit {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        color: #11999E;
+    }
+      
